<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/registro"
        android:title="@string/registro"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/saludo"
        android:title="@string/saludo"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/notificacion"
        android:title="@string/notificacion"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="3"
        app:showAsAction="never"/>


    <item
        android:id="@+id/mapa"
        android:title="Mapa"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="4"
        app:showAsAction="never"/>

    <item
        android:id="@+id/archivo"
        android:title="@string/archivo"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="5"
        app:showAsAction="never"/>

    <item
        android:id="@+id/configuracion"
        android:title="@string/configuracion"
        android:icon="@drawable/ic_masr"
        android:orderInCategory="6"
        app:showAsAction="always"/>





</menu>