<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medio"
    android:background="@drawable/fondo"
    tools:context=".Detalle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/inicio"
            android:textSize="@dimen/maximo"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/nombre_completo"
            app:endIconMode="none"
            app:startIconContentDescription="nombre completo"
            android:layout_below="@+id/mtv_titulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:enabled="false"
                android:maxLines="1"
                android:padding="@dimen/minimo"
                android:text="@string/nombre_completo"
                android:textColor="@color/design_default_color_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_telefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/telefono"
            app:endIconMode="none"
            app:startIconContentDescription="telefono"
            android:layout_below="@+id/til_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:enabled="false"
                android:maxLines="1"
                android:padding="@dimen/minimo"
                android:text="@string/telefono"
                android:textColor="@color/design_default_color_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/email"
            app:endIconMode="none"
            app:startIconContentDescription="email"
            android:layout_below="@+id/til_telefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:enabled="false"
                android:maxLines="1"
                android:padding="@dimen/minimo"
                android:text="@string/email"
                android:textColor="@color/design_default_color_primary"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_descripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/descripcion"
            app:endIconMode="none"
            app:startIconContentDescription="descripcion"
            android:layout_below="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:enabled="false"
                android:padding="@dimen/minimo"
                android:text="@string/descripcion"
                android:textColor="@color/design_default_color_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medio"
            android:text="@string/registrar"
            android:layout_below="@+id/til_descripcion"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>